--- a/Nivel_1/index.html
+++ b/Nivel_1/index.html
@@ -4,9 +4,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Biografia: </title>
+    <title>Biografia:  </title>
 </head>
 <body>
-    
+
+    <table>
+        <tr>
+            <th>Conciertos</th>
+            <th>Fechas</th>
+            <th>Auditorios</th>
+        </tr>
+        <tr>
+            <td>Miami</td>
+            <td>20/04/2025</td>
+            <td>Gota de plata</td>
+        </tr>
+    </table>
 </body>
 </html>
