Arreglos de tabla y seccion de redes sociales

--- a/Nivel_1/index.html
+++ b/Nivel_1/index.html
@@ -1,19 +1,48 @@
 <!-- Nivel  1 Hacer una biografia de algun famoso -->
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>
+         th, td{
+            border: 1px solid black;
+            border-radius: 10px;
+        }
+        ul{
+            list-style: none;
+            margin: 0;
+            padding: 0px;
+        }
+        li{
+            float: left;
+        }
+        li a{
+            padding: 10px;
+        }
+    </style>
+
     <title>Biografia: Till Lindemann </title>
 
     <h1>Biografia Till Lindemann</h1>
 
 </head>
+
 <body>
 
+
+    <h3>Sus Redes sociales:</h3> 
+    <ul>
+        <li><a style="text-decoration: none;" href="https://www.instagram.com/till_lindemann_official/#" target="_blank" title="Instagram">Instagram</a></li>
+        <li><a style="text-decoration: none;" href="https://x.com/Lindemann63" target="_blank" title="X">X</a></li>
+        <li><a style="text-decoration: none;" href="https://open.spotify.com/intl-es/artist/6wWVKhxIU2cEi0K81v7HvP?autoplay=true" target="_blank" title="Spotify">Spotify</a></li>
+    </ul>
+    
+    <br>
     <table>
         <tr>
-            <th>Conciertos</th>
+            <th style="width: 29%;">Conciertos</th>
             <th>Fechas</th>
             <th>Auditorios</th>
         </tr>
@@ -22,6 +51,22 @@
             <td>20/04/2025</td>
             <td>Gota de plata</td>
         </tr>
+        <tr>
+            <td>Los Angeles</td>
+            <td>20/012/2025</td>
+            <td>godaddy</td>
+        </tr>
+        <tr>
+            <td>Alemania</td>
+            <td>20/12/2026</td>
+            <td>Gutentag</td>
+        </tr>
+        <tr>
+            <td>Belgica</td>
+            <td>20/12/2027</td>
+            <td>Belgicax</td>
+        </tr>
     </table>
 </body>
+
 </html>
