venta de boletos

--- a/Nivel_1/index.html
+++ b/Nivel_1/index.html
@@ -67,6 +67,12 @@
             <td>Belgicax</td>
         </tr>
     </table>
+
+    <h3>Venta de boletos</h3>
+    <img src="/Imagen1.jpg" alt="Imgen rammstein">
+    <h3>Cantidad de boletos vendidos hasta ahora: </h3>
+    <h2>200,000,000 Hasta el momento</h2>
+
 </body>
 
 </html>
